@@ -1080,9 +1080,11 @@ $orange-dark: #f7741d;
 
 %single-entry-content {
 	.single-main-info {
-		float: left;
-		width: 100%;
-		margin: 0 0 30px 0;
+		@media only screen and (min-width: 768px) {
+			float: left;
+			width: 100%;
+			margin: 0 0 30px 0;
+		}
 
 		h3 {
 			margin: 0;
